# ticket-forge

./: .dockerignore  .gitignore  .npmignore  .pre-commit-config.yaml  .terraformignore  AGENTS.md  Justfile  README.md  data.dvc  docker-compose.yml  models.dvc  package-lock.json  pyproject.toml  pyrightconfig.json
.dvc/: config
.github/: copilot-instructions.md
.github/workflows/: airflow-deploy.yml  ci.yml  model-cicd.yml  model-monitoring.yml  serving-deploy.yml  ticketforge-app-serving-deploy.yml
apps/pipelines/: README.md  pyproject.toml
apps/pipelines/pipelines/: __init__.py
apps/pipelines/pipelines/etl/: dsn.py
apps/pipelines/pipelines/etl/ingest/: csv_to_json.py  scrape_github_issues_sample.py
apps/pipelines/pipelines/etl/ingest/resume/: coldstart.py  resume_extract.py  resume_normalize.py
apps/pipelines/pipelines/etl/postload/: __init__.py  load_tickets.py  publish_ticket_etl_output.py  replay_tickets.py
apps/pipelines/pipelines/etl/transform/: keyword_extraction.py  normalize_text.py  run_transform.py  run_transform_sample.py  temporal_features.py
apps/pipelines/tests/: conftest.py  test_coldstart.py  test_load_tickets.py  test_publish_ticket_etl_output.py  test_replay_tickets.py  test_scrape_github_issues_graphql.py  test_transform_helpers.py  test_transform_pipeline.py
apps/training/: README.md  pyproject.toml
apps/training/tests/: conftest.py  test_airflow_dags.py  test_airflow_vm_bootstrap.py  test_analysis_helpers.py  test_bias_gate.py  test_cloud_storage_loader.py  test_cmd_train.py  test_cmd_train_with_gates.py  test_coldstart.py  test_dag_runtime.py  test_dataset.py  test_drift_detection.py  test_gate_report_schema.py  test_harness_bias.py  test_load_tickets.py  test_mlflow_config.py  test_mlflow_tracking.py  test_mlflow_tracking_metadata.py  test_model_cicd_notifications.py  test_model_cicd_triggering.py  test_monitor_model.py  test_ops_report.py  test_promotion_rollback.py  test_publish_ticket_etl_output.py  test_push_model_artifact.py  test_regression_guardrail.py  test_replay_tickets.py  test_run_manifest.py  test_scrape_github_issues_graphql.py  test_terraform_cloudsql_idempotency.py  test_trainers.py  test_training_cli_cloud_storage.py  test_training_manifest.py  test_transform_helpers.py  test_transform_pipeline.py  test_validation_gate.py
apps/training/training/: cloud_storage_loader.py  dataset.py  inference_app.py
apps/training/training/analysis/: __init__.py  bias_gate.py  detect_bias.py  drift_detection.py  gate_config.py  gate_report.py  mlflow_config.py  mlflow_tracking.py  ops_report.py  push_model_artifact.py  regression_guardrail.py  run_anomaly_check.py  run_bias_mitigation.py  run_data_profiling.py  run_manifest.py  validation_gate.py
apps/training/training/cmd/: monitor_model.py  train.py  train_with_gates.py
apps/training/training/etl/ingest/: scrape_github_issues_improved.py
apps/training/training/etl/ingest/resume/: coldstart.py
apps/training/training/etl/postload/: __init__.py  load_tickets.py  publish_ticket_etl_output.py  replay_tickets.py
apps/training/training/etl/transform/: embed.py  run_transform.py  run_transform_sample.py  temporal_features.py
apps/training/training/trainers/: train_forest.py  train_linear.py  train_svm.py  train_xgboost.py
apps/training/training/trainers/utils/: harness.py
apps/transform/: embed.py  engineer_features.py  keyword_extraction.py  normalize_text.py  run_transform.py
apps/web-backend/: Dockerfile  README.md  pyproject.toml
apps/web-backend/tests/: conftest.py  test_airflow_service.py  test_auth.py  test_coldstart_router.py  test_database.py  test_inference.py  test_main.py
apps/web-backend/web_backend/: config.py  database.py  main.py
apps/web-backend/web_backend/api/v1/: auth.py  inference.py  projects.py  router.py  tickets.py  users.py
apps/web-backend/web_backend/constants/: __init__.py  auth.py  projects.py
apps/web-backend/web_backend/middleware/: cors.py
apps/web-backend/web_backend/models/: __init__.py  base.py  inference.py  project.py  ticket.py  user.py
apps/web-backend/web_backend/schemas/: auth.py  inference.py  projects.py  tickets.py
apps/web-backend/web_backend/security/: __init__.py  dependencies.py  hashing.py  jwt.py
apps/web-backend/web_backend/services/: airflow.py  auth.py  inference.py  projects.py  tickets.py
apps/web-frontend/: Dockerfile  README.md  eslint.config.mjs  package.json
dags/: email_callbacks.py  resume_ingest.py  ticket_etl.py  ticket_etl_from_file.py
docker/: README.md  base.Dockerfile  frontend.Dockerfile  inference.Dockerfile
docker/airflow/: Dockerfile  README.md  entrypoint.sh
libs/ml-core/: README.md  pyproject.toml
libs/ml-core/ml_core/anomaly/: README.md  __init__.py  alerting.py  detector.py  ge_validator.py  validator.py
libs/ml-core/ml_core/embeddings/: service.py
libs/ml-core/ml_core/features/: __init__.py  schema.py
libs/ml-core/ml_core/keywords/: extractor.py
libs/ml-core/ml_core/profiles/: updater.py
libs/ml-core/ml_core/retrieval/: __init__.py  hybrid_retrieval.py
libs/ml-core/tests/: test_alert_gmail.py  test_anomaly.py  test_embeddings.py  test_ge_validator.py  test_hybrid_retrieval.py  test_keywords.py  test_profiles.py
libs/shared/: README.md  pyproject.toml
libs/shared/shared/: configuration.py
libs/shared/tests/: test_shared_utilities.py
reports/: 00_DATA_PIPELINE.md  00_ML_PIPELINE.md  01_ML_PIPELINE.md  02_DEPLOYMENT_AND_SUBMISSION.md
scripts/ci/: airflow_smoketest.sh  airflow_trigger_dag.sh  apply_ticketforge_schema_init.sh  backend_smoketest.sh  deploy_serving.sh  frontend_smoketest.sh  model_change_filter.sh  train_with_gates_docker.sh  verify_submission_ready.sh
scripts/postgres/: README.md
terraform/: .terraform.lock.hcl  README.md  app_serving.tf  cloud_sql.tf  cloud_storage.tf  iam.tf  main.tf  mlflow.tf  network.tf  outputs.tf  providers.tf  secrets.tf  serving.tf  terraform.tfvars.example  variables.tf
terraform/templates/: airflow_startup.sh.tftpl
typings/airflow/: __init__.pyi  decorators.pyi  exceptions.pyi
(+39 files in other folders)
