[project]
name = "ticket-forge"
version = "0.1.0"
description = "Machine Learning project monorepo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "apps/training",
    "apps/web-backend",
    "libs/*",
    "notebooks"
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.2.0",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "pre-commit>=4.5.1",
]

[tool.ruff]
line-length = 88
indent-width = 2
target-version = "py312"
exclude = [
    "dags/**",
]

[tool.ruff.lint]
select = [
    "D",
    "E",
    "F",
    "ANN",
    "B",
    "A",
    "LOG",
    "R",
    "EM",
    "Q0",
    "I",
    "N",
    "TRY",
    "TID",
    "PLR",
]
ignore = ["D104", "D100", "D205", "TRY002", "PLR2004"]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in all files starting with "test_"
"test_*.py" = [
    "D100",   # Missing docstrings in public module
    "D101",   # Missing docstrings in public class
    "D102",   # Missing docstrings in public method
    "D103",   # Missing docstrings in public function
    "S101",   # Use of `assert` detected (common in tests)
    "ANN401", # Use of any
    "F841",   # Unused var
    "PLR2004",# Magic value used in comparison
    "ANN"
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "apps/web-backend",
    "apps/training",
    "libs/ml-core",
    "libs/shared",
]
timeout = 30
asyncio_mode = "auto"

[tool.pyright]
strict = ["**/*.py"]
typeCheckingMode = "standard"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportArgumentType = "none"
reportReturnType = "none"
pythonVersion = "3.12"
exclude = [
    "dags/**",
]
extraPaths = [
    "apps/web-backend",
    "apps/training",
    "libs/ml-core",
    "libs/shared",
]


[tool.setuptools.packages.find]
where = ["apps", "libs"]