[project]
name = "ml-core"
version = "0.1.0"
description = "Core machine learning utilities and models"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=2.2.0",
    "great-expectations>=0.18.0",
    "marshmallow<4.0.0",
    "shared",
    "torch>=2.10.0",
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true  # Only use this index for packages that explicitly ask for it

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
shared = { workspace = true }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
